Fixed removing follow request not showing empty message
Also fixed an error where the view being loaded to JS had the wrong name
Removed follow requests sent from follow requests in the network page.
Now only show follow requests received

--- a/public/css/follow.css
+++ b/public/css/follow.css
@@ -2,3 +2,7 @@
     background-color: grey;
     border-color: grey;
 }
+.empty-list {
+    padding: 0.5rem;
+    text-align: center;
+}
